2004-04-29  Matthias Clasen  <mclasen@redhat.com>

	* tests/testentrycompletion.c (main): Add a missing 
	cat.  (#141070, Chris Sherlock)  

	* gtk/gtkrc.c (gtk_rc_check_pixmap_dir): Remove unused
	variable.  (#141022, Chris Sherlock)
	
	* gtk/gtkcombo.c (gtk_combo_popup_list): Add a missing
	cast.  (#141013, Chris Sherlock)

	* gtk/gtkcellview.c (gtk_cell_view_cell_layout_clear): Remove
	unused variable.  (#141011, Chris Sherlock)

2004-04-29  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkgc-win32.c (gdk_win32_gc_set_dashes): Plug memory
	leak. (#140775, John Ehresman)

Thu Apr 29 01:09:50 2004  Matthias Clasen  <maclas@gmx.de>

	* gdk/gdkdraw.c (_gdk_drawable_get_scratch_gc): Use depth - 1
	to index the cached gcs, not depth.  (#139494)

2004-04-28  Matthias Clasen  <mclasen@redhat.com>

	* gdk/gdkdraw.c (_gdk_drawable_get_scratch_gc): Docs typo fix.

Sun Apr 25 15:36:02 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtktoolbutton.c (gtk_tool_button_set_label_widget): Fix
	cut'n'paste-o from previous commit. (#141046, Torsten Schoenfeld).

2004-04-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Patch to add support for string conversion callbacks to
	GtkIMContextXIM (#101814)

	* modules/input/gtkimcontextxim.c: Set the string conversion callback
	if supported by the XIC.

	(struct _GtkIMContextXIM): Add string_conversion_callback member.

	(struct _GtkXIMInfo, setup_im): Check and keep flag inidicating
	whether string conversion callback is supported.

	(gtk_im_context_get_ic, +set_string_conversion_callback,
	+string_conversion_callback): Also initialize string conversion
	callback, if supported, along with the IC initialization.

	* modules/input/imxim.c: Make "xim" module default for Thai as well.

2004-04-23  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkclipboard.c (gtk_clipboard_wait_for_targets): Correctly
	initialize targets.  (#139883, John Finlay)

	* gdk/gdkdraw.c (gdk_draw_drawable): Small doc improvement. 
